A horrible hack to stop overflowing of console under status bar

--- a/css/console.css
+++ b/css/console.css
@@ -1,8 +1,11 @@
 .bracketsjdk #content-wrapper{
-	max-height: 100%; 
-	overflow-y: auto;
 	padding: 10px;
+	margin-bottom: 30px;
+	overflow-y: auto;
+	/* I really, really hate css. This was the only way to stop overflowing under the status bar. HALP!*/
+	height: calc(100% - 6px - 30px);
 }
+
 .bracketsjdk pre{
 	display: inline;
 	font-family: inherit; 
@@ -10,6 +13,7 @@
 	border-style: none; 
 	color: inherit;
 	padding: 0;
+	margin: 0;
 	font-size: 1.5em;
 	line-height: 1.5;
 }
